@@ -35,6 +35,7 @@ Bug fixes
  - [web] handle URI in vCard photos (#2683)
  - [web] handle semicolon in values during LDIF import (#1760)
  - [web] fixed computation of week number (#3973, #3976)
+ - [web] fixed saving of inactive calendars (#3862, #3980)
  - [eas] properly skip folders we don't want to synchronize (#3943)
  - [eas] fixed 30 mins freebusy offset with S Planner
  - [eas] now correctly handles reminders on tasks (#3964)
